@startuml Class Diagram - Website Bán Quần Áo KAITO KID

skinparam backgroundColor #87CEEB
skinparam class {
    BackgroundColor #87CEEB
    BorderColor #000000
    ArrowColor #000000
}

' ===== LỚP NGƯỜI DÙNG (BASE CLASS) =====
class NguoiDung {
    -maNguoiDung : string
    -tenDangNhap : string
    -matKhau : string
    -hoTen : string
    -email : string
    -soDienThoai : string
    -diaChi : string
    --
    +dangNhap()
    +dangXuat()
    +capNhatThongTin()
    +doiMatKhau()
    +dangKy()
}

' ===== LỚP ADMIN (KẾ THỪA TỪ NGUOIDUNG) =====
class Admin {
    -maAdmin : string
    -tenDangNhap : string
    -matKhau : string
    --
    +dangNhap()
    +dangXuat()
    +quanLySanPham()
    +quanLyKhachHang()
    +quanLyDonHang()
    +quanLyDanhMuc()
    +quanLyMaGG()
    +quanLyKho()
    +xeperation()
}

' ===== LỚP KHÁCH HÀNG (KẾ THỪA TỪ NGUOIDUNG) =====
class KhachHang {
    -maKhachHang : string
    -hoTen : string
    -email : string
    -soDienThoai : string
    -diaChi : string
    -hangThanhVien : string
    -tongChiTieu : decimal
    -soDonHang : int
    -ngayThamGia : date
    -trangThai : string
    --
    +xemSanPham()
    +themGioHang()
    +datHang()
    +theoDoiDonHang()
    +danhGiaSanPham()
}

' ===== LỚP SẢN PHẨM =====
class SanPham {
    -maSanPham : string
    -tenSanPham : string
    -giaBan : decimal
    -giaGoc : decimal
    -soLuongTonKho : int
    -moTa : string
    -moTaChiTiet : string
    -trangThai : string
    -maDanhMuc : string
    -maMenu : string
    -hinhAnh : string[]
    -kichThuoc : string[]
    -mauSac : string[]
    -SKU : string
    -suaTTSP : boolean
    -xoaSanPham : boolean
    -locSanPham : boolean
    --
    +themSP()
    +suaTTSP()
    +xoaSP()
    +timKiemSP()
    +locSanPham()
}

' ===== LỚP DANH MỤC =====
class DanhMuc {
    -maDanhMuc : string
    -tenDanhMuc : string
    -moTa : string
    -maDanhMucCha : string
    -maMenu : string
    -trangThai : string
    --
    +themDM()
    +suaDM()
    +xoaDM()
    +timKiemDM()
}

' ===== LỚP BỘ SƯU TẬP =====
class BoSuuTap {
    -maBST : string
    -tenBST : string
    -moTa : string
    -hinhAnh : string
    -ngayBatDau : date
    -ngayKetThuc : date
    -trangThai : string
    --
    +themBST()
    +suaBST()
    +xoaBST()
}

' ===== LỚP GIỎ HÀNG =====
class GioHang {
    -maGioHang : string
    -maNguoiDung : string
    -danhSachSP : CartItem[]
    -tongTien : decimal
    --
    +themSP()
    +xoaSP()
    +capNhatSoLuong()
    +tinhTongTien()
    +xoaTatCa()
}

' ===== LỚP CHI TIẾT GIỎ HÀNG (CARTITEM) =====
class ChiTietGioHang {
    -maSanPham : string
    -tenSanPham : string
    -hinhAnh : string
    -giaBan : decimal
    -soLuong : int
    -kichThuoc : string
    -mauSac : string
    --
    +tinhThanhTien()
}

' ===== LỚP ĐƠN HÀNG =====
class DonHang {
    -maDonHang : string
    -ngayDat : datetime
    -trangThai : string
    -tongTien : decimal
    -phiVanChuyen : decimal
    -giamGia : decimal
    -maNguoiDung : string
    -phuongThucThanhToan : string
    -trangThaiThanhToan : string
    -hinhThucNhanHang : string
    -ghiChu : string
    --
    +capNhatTrangThai()
    +themDon()
    +suaDon()
    +xoaDon()
    +huyDon()
    +timKiemDon()
    +tinhTongTien()
}

' ===== LỚP CHI TIẾT ĐƠN HÀNG =====
class ChiTietDonHang {
    -maChiTiet : string
    -maDonHang : string
    -maSanPham : string
    -tenSanPham : string
    -hinhAnh : string
    -soLuong : int
    -giaBan : decimal
    -kichThuoc : string
    -mauSac : string
    --
    +tinhThanhTien()
}

' ===== LỚP THÔNG TIN NHẬN HÀNG =====
class ThongTinNhanHang {
    -hoTen : string
    -soDienThoai : string
    -email : string
    -diaChi : string
    -tinhThanh : string
    -quanHuyen : string
    -phuongXa : string
}

' ===== LỚP KHUYẾN MÃI =====
class KhuyenMai {
    -maKhuyenMai : string
    -tenKhuyenMai : string
    -moTa : string
    -loaiKhuyenMai : string
    -giaTriGiam : decimal
    -ngayBatDau : datetime
    -ngayKetThuc : datetime
    -apDungCho : string
    -banner : string
    -trangThai : string
    --
    +themCTKM()
    +suaCTKM()
    +xoaCTKM()
    +kiemTraHieuLuc()
}

' ===== LỚP MÃ GIẢM GIÁ (COUPON) =====
class MaGiamGia {
    -maCoupon : string
    -tenMa : string
    -loaiGiam : string
    -giaTriGiam : decimal
    -donToiThieu : decimal
    -giamToiDa : decimal
    -soLuong : int
    -daSuDung : int
    -ngayBatDau : date
    -ngayKetThuc : date
    -trangThai : string
    --
    +themMaGG()
    +suaMaGG()
    +xoaMaGG()
    +timKiemMaGG()
    +kiemTraHopLe()
    +apDungMa()
}

' ===== LỚP FLASH SALE =====
class FlashSale {
    -maFlashSale : string
    -tenFlashSale : string
    -thoiGianBatDau : datetime
    -thoiLuong : int
    -danhSachSP : FlashSaleItem[]
    -hienCountdown : boolean
    -trangThai : string
    --
    +themFlashSale()
    +suaFlashSale()
    +xoaFlashSale()
    +kiemTraConHan()
}

' ===== LỚP KHO HÀNG =====
class KhoHang {
    -maKho : string
    -maSanPham : string
    -tenSanPham : string
    -SKU : string
    -soLuongTon : int
    -daBan : int
    --
    +nhapKho()
    +xuatKho()
    +kiemTraTonKho()
    +canhBaoHetHang()
}

' ===== LỚP LỊCH SỬ KHO =====
class LichSuKho {
    -maLichSu : string
    -maSanPham : string
    -loai : string
    -soLuong : int
    -lyDo : string
    -ngay : datetime
    -ghiChu : string
}

' ===== LỚP ĐÁNH GIÁ =====
class DanhGia {
    -maDanhGia : string
    -maDonHang : string
    -maSanPham : string
    -tenSanPham : string
    -tenKhachHang : string
    -soSao : int
    -nhanXet : string
    -ngayDanhGia : datetime
    --
    +themDanhGia()
    +xoaDanhGia()
}

' ========================================
' ===== CÁC MỐI QUAN HỆ =====
' ========================================

' ----- 1. QUAN HỆ GENERALIZATION (KẾ THỪA) -----
' Admin kế thừa từ NguoiDung (Admin là một loại NguoiDung đặc biệt)
NguoiDung <|-- Admin : kế thừa

' KhachHang kế thừa từ NguoiDung
NguoiDung <|-- KhachHang : kế thừa

' ----- 2. QUAN HỆ ASSOCIATION: DanhMuc - SanPham -----
' Một danh mục chứa nhiều sản phẩm, mỗi sản phẩm thuộc một danh mục
DanhMuc "1" -- "0..*" SanPham : chứa >

' ----- 3. QUAN HỆ ASSOCIATION: SanPham - GioHang (thông qua ChiTietGioHang) -----
' Một sản phẩm có thể được thêm vào nhiều giỏ hàng
SanPham "1" -- "0..*" ChiTietGioHang : tham chiếu >

' ----- 4. QUAN HỆ ASSOCIATION: NguoiDung/KhachHang - DonHang -----
' Một người dùng có thể đặt nhiều đơn hàng, mỗi đơn hàng thuộc một người dùng
KhachHang "1" -- "0..*" DonHang : đặt >

' ----- 5. QUAN HỆ ASSOCIATION: NguoiDung/KhachHang - GioHang -----
' Mỗi người dùng có một giỏ hàng riêng
KhachHang "1" -- "1" GioHang : có >

' ----- 6. QUAN HỆ COMPOSITION: DonHang - ChiTietDonHang -----
' Một đơn hàng gồm nhiều chi tiết, chi tiết không tồn tại độc lập
DonHang "1" *-- "1..*" ChiTietDonHang : gồm >

' ----- 7. QUAN HỆ ASSOCIATION: KhuyenMai/MaGiamGia - DonHang -----
' Một khuyến mãi có thể áp dụng cho nhiều đơn hàng
MaGiamGia "0..1" -- "0..*" DonHang : áp dụng >

' ----- 8. QUAN HỆ COMPOSITION: GioHang - ChiTietGioHang -----
' Giỏ hàng chứa nhiều chi tiết giỏ hàng (CartItem)
GioHang "1" *-- "0..*" ChiTietGioHang : chứa >

' ----- 9. QUAN HỆ COMPOSITION: DonHang - ThongTinNhanHang -----
' Mỗi đơn hàng có một thông tin nhận hàng
DonHang "1" *-- "1" ThongTinNhanHang : có >

' ----- 10. QUAN HỆ ASSOCIATION: ChiTietDonHang - SanPham -----
' Chi tiết đơn hàng tham chiếu đến sản phẩm
ChiTietDonHang "0..*" -- "1" SanPham : tham chiếu >

' ----- 11. QUAN HỆ ASSOCIATION: BoSuuTap - SanPham -----
' Một bộ sưu tập có thể chứa nhiều sản phẩm
BoSuuTap "0..1" -- "0..*" SanPham : thuộc >

' ----- 12. QUAN HỆ ASSOCIATION: KhuyenMai - SanPham -----
' Khuyến mãi có thể áp dụng cho nhiều sản phẩm
KhuyenMai "0..*" -- "0..*" SanPham : áp dụng >

' ----- 13. QUAN HỆ ASSOCIATION: FlashSale - SanPham -----
' Flash sale chứa nhiều sản phẩm
FlashSale "0..*" -- "0..*" SanPham : chứa >

' ----- 14. QUAN HỆ ASSOCIATION: SanPham - KhoHang -----
' Mỗi sản phẩm có thông tin kho hàng tương ứng
SanPham "1" -- "1" KhoHang : quản lý >

' ----- 15. QUAN HỆ ASSOCIATION: KhoHang - LichSuKho -----
' Kho hàng ghi nhận nhiều lịch sử nhập/xuất
KhoHang "1" -- "0..*" LichSuKho : ghi nhận >

' ----- 16. QUAN HỆ ASSOCIATION: DonHang - DanhGia -----
' Một đơn hàng có thể có nhiều đánh giá (cho từng sản phẩm)
DonHang "1" -- "0..*" DanhGia : có >

' ----- 17. QUAN HỆ ASSOCIATION: KhachHang - DanhGia -----
' Khách hàng có thể viết nhiều đánh giá
KhachHang "1" -- "0..*" DanhGia : viết >

' ----- 18. QUAN HỆ ASSOCIATION: SanPham - DanhGia -----
' Một sản phẩm có thể có nhiều đánh giá
SanPham "1" -- "0..*" DanhGia : được đánh giá >

' ----- 19. QUAN HỆ DEPENDENCY: Admin quản lý các thực thể -----
Admin ..> SanPham : quản lý
Admin ..> DonHang : quản lý
Admin ..> KhachHang : quản lý
Admin ..> KhuyenMai : quản lý
Admin ..> MaGiamGia : quản lý
Admin ..> KhoHang : quản lý
Admin ..> DanhMuc : quản lý
Admin ..> BoSuuTap : quản lý
Admin ..> FlashSale : quản lý

@enduml
